updated for java 18